<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.solarsystemclean.presentation.ui.main.components.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/actionHomeToDetail"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.solarsystemclean.presentation.ui.main.components.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" >
        <action
            android:id="@+id/actionSearchToDetail"
            app:destination="@id/detailActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.solarsystemclean.presentation.ui.main.components.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.solarsystemclean.presentation.ui.main.components.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <activity
        android:id="@+id/detailActivity"
        android:name="com.example.solarsystemclean.presentation.ui.detail.DetailActivity"
        android:label="Detalhes"
        tools:layout="@layout/activity_detail" >
        <argument
            android:name="planet"
            app:argType="com.example.solarsystemclean.presentation.ui.model.PlanetUiModel" />
    </activity>
</navigation>