<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_constellation"
    tools:context=".presentation.ui.main.components.favorites.FavoritesFragment">

    <ImageView
        style="@style/ImageBackground"
        android:contentDescription="@string/cd_background_de_estrelas"
        android:src="@drawable/ic_background_constellation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        style="@style/ImageBackground"
        android:contentDescription="@string/cd_background_de_estrelas"
        android:src="@drawable/ic_stars_constelation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="@dimen/margin_twenty_four"
                android:contentDescription="@string/cd_icon_settings"
                android:src="@drawable/ic_settings_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtFavoritesLabel"
                style="@style/TextHomeAppBar"
                android:text="@string/title_favorites"
                app:layout_constraintEnd_toStartOf="@+id/ivSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivSettings" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFavorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_eight"
                android:layout_marginTop="@dimen/margin_twenty_four"
                android:layout_marginEnd="@dimen/margin_eight"
                app:layout_constraintEnd_toStartOf="@+id/ivSettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtFavoritesLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>