<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="planet"
            type="com.example.solarsystemclean.presentation.ui.model.PlanetUiModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_sixteen"
        app:cardCornerRadius="@dimen/margin_sixteen">

        <androidx.constraintlayout.widget.ConstraintLayout
            planetsSearchClickListener="@{planet}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bcg_brand_gradient"
            android:paddingBottom="@dimen/margin_sixteen"
            android:tag="@{planet.id}">

            <ImageView
                android:id="@+id/ivPlanet"
                android:layout_width="180dp"
                android:layout_height="164dp"
                android:imageUrl="@{planet.image}"
                android:scaleType="center"
                android:scrollX="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNamePlanet"
                style="@style/TextTitlePlanet"
                android:layout_margin="@dimen/margin_sixteen"
                android:text="@{planet.name}"
                app:layout_constraintEnd_toStartOf="@+id/ivFavorite"
                app:layout_constraintStart_toEndOf="@+id/ivPlanet"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivFavorite"
                applyFavoriteColor="@{planet.favorite}"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/margin_sixteen"
                android:contentDescription="@string/txt_save_planet_favorite"
                android:src="@drawable/ic_save"
                app:layout_constraintBottom_toBottomOf="@id/tvNamePlanet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvNamePlanet"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvDescriptionPlanet"
                style="@style/TextPlanetDescription"
                android:layout_margin="@dimen/margin_sixteen"
                android:layout_marginTop="@dimen/margin_eight"
                android:ellipsize="end"
                android:lines="4"
                android:maxLines="4"
                android:text="@{planet.resume}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPlanet"
                app:layout_constraintTop_toBottomOf="@+id/tvNamePlanet" />

            <TextView
                android:id="@+id/tvLabelSeeMore"
                style="@style/TextSeeMore"
                android:layout_margin="@dimen/margin_sixteen"
                android:layout_marginTop="@dimen/margin_eight"
                android:text="@string/txt_see_more"
                app:layout_constraintStart_toEndOf="@+id/ivPlanet"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionPlanet" />

            <ImageView
                android:id="@+id/ivAccess"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/margin_sixteen"
                android:contentDescription="@string/txt_acess_details_planet"
                android:src="@drawable/ic_forward"
                app:layout_constraintBottom_toBottomOf="@id/tvLabelSeeMore"
                app:layout_constraintStart_toEndOf="@+id/tvLabelSeeMore"
                app:layout_constraintTop_toTopOf="@id/tvLabelSeeMore" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>